# mkv-episode-matcher

./: .coverage  .coverage.DESKTOP-NTJ52LL.19040.XkHNEbEx  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  ISSUE_73_FIX_SUMMARY.md  LICENSE  README.md  README.rst  __main__.py  build_executables.py  config.py  episode_matcher.py  flet_app.spec  flet_build.yaml  index.html  main.py  mkdocs.yml  mkv_match.spec  objects.inv  old_pyproject.toml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test_functionality.py  tmdb_client.py
.claude/: settings.local.json
.github/: funding.yml
.github/workflows/: build_release.yml  documentation.yml  flet-builds.yml  install-test.yml  python-publish.yml  tests.yml
CHANGELOG/: index.html
api/: index.html
changelog/: index.html
cli/: index.html
configuration/: index.html
docs/: api.rst  changelog.md  cli.md  conf.py  configuration.md  index.md  index.rst  installation.md  quickstart.md  requirements.txt  tips.md
docs/_build/doctrees/: environment.pickle  index.doctree  mkv_episode_matcher.doctree  modules.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  mkv_episode_matcher.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree  mkv_episode_matcher.doctree  readme.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  mkv_episode_matcher.rst.txt  modules.rst.txt  readme.rst.txt
docs/api/: index.md
installation/: index.html
mkv_episode_matcher/: .bumpversion.cfg  __init__.py  __main__.py  asr_models.py  audio_transcription.py  cli.py  config.py  episode_identification.py  episode_matcher.py  fast.ipynb  mkv_to_srt.py  opencv_matching.ipynb  requirements.txt  speech_to_text.py  subtitle_utils.py  tmdb_client.py  tui_app.py  tui_styles.tcss  utils.py  whisper_transcriber.py
mkv_episode_matcher/backend/: dependencies.py  main.py  socket_manager.py
mkv_episode_matcher/backend/routers/: match.py  scan.py  system.py  websocket.py
mkv_episode_matcher/core/: config_manager.py  engine.py  matcher.py  model_registry.py  models.py  utils.py
mkv_episode_matcher/core/providers/: asr.py  subtitles.py
mkv_episode_matcher/frontend/: .gitignore  BUILD.md  package-lock.json  vite.config.ts
mkv_episode_matcher/frontend/src/: App.tsx  index.css
mkv_episode_matcher/frontend/src/components/: FileBrowser.tsx  FileReviewGrid.tsx  Layout.tsx  OnboardingModal.tsx  SettingsView.tsx  Sidebar.tsx
mkv_episode_matcher/libraries/pgs2srt/: README.md  imagemaker.py  pgs2srt.py  pgsreader.py  requirements.txt
mkv_episode_matcher/notebooks/: get_subtitles_test.ipynb  whisper.ipynb
mkv_episode_matcher/ui/: flet_app.py
notebooks/: get_subtitles_test.ipynb
perf-test/: README.md  analysis.py  benchmark_cache.py  benchmark_debug.txt  benchmark_debug_2.txt  benchmark_output.txt  benchmark_output_2.txt  benchmark_output_3.txt  benchmark_output_4.txt  benchmark_output_5.txt  benchmark_output_ctc.txt  benchmark_output_ctc_2.txt  benchmark_output_ctc_3.txt  benchmark_output_expanse.txt  benchmark_suite_output.txt  benchmark_suite_output_v2.txt  benchmark_suite_output_v3.txt  benchmark_suite_output_v4.txt  check_cache.py  check_expanse_cache.py  check_rm_files.py  config.yaml  debug_audio_output.txt  debug_audio_output_2.txt  debug_audio_processing.py  debug_cpu_output.txt  debug_parakeet.py  debug_parakeet_cpu.py  diagnostic_test.py  model_comparison.py  new_benchmark.py  performance_benchmark.py  profiler.py  requirements.txt  resource_monitor.py  simple_benchmark.py  simple_gpu_benchmark.py  test_complete.py  test_framework.py  test_framework_simple.py  (+3 more)
perf-test/reports/: benchmark_report_20251225_220307.json  benchmark_report_20251225_230511.json  benchmark_report_20251225_230810.json  benchmark_report_20251225_232006.json  benchmark_report_20251225_233923.json  benchmark_report_20251226_000305.json  diagnostic_report_20251225_220611.json  diagnostic_report_20251225_220627.json
perf-test/reports/profiles/20251225_220307/: Rick and Morty - S01E01.mkv_cpu_whisper_base_profile.txt  Rick and Morty - S01E01.mkv_cpu_whisper_tiny_profile.txt  Rick and Morty - S01E01.mkv_cuda_whisper_base_profile.txt  Rick and Morty - S01E01.mkv_cuda_whisper_tiny_profile.txt  The Expanse - S01E01.mkv_cpu_whisper_base_profile.txt  The Expanse - S01E01.mkv_cpu_whisper_tiny_profile.txt  The Expanse - S01E01.mkv_cuda_whisper_base_profile.txt  The Expanse - S01E01.mkv_cuda_whisper_tiny_profile.txt  parakeet-tdt-0_profile.txt
perf-test/reports/profiles/20251225_230511/: Rick and Morty - S01E01.mkv_cuda_whisper_tiny_profile.txt  The Expanse - S01E01.mkv_cuda_whisper_tiny_profile.txt  parakeet-ctc-0_profile.txt
perf-test/reports/profiles/20251225_230810/: Rick and Morty - S01E01.mkv_cuda_whisper_tiny_profile.txt  The Expanse - S01E01.mkv_cuda_whisper_tiny_profile.txt  parakeet-ctc-0_profile.txt
perf-test/reports/profiles/20251225_232006/: Rick and Morty - S01E01.mkv_cuda_whisper_tiny_profile.txt  Ted Lasso - S01E01.mkv_cuda_whisper_tiny_profile.txt  The Expanse - S01E01.mkv_cuda_whisper_tiny_profile.txt  parakeet-ctc-0_profile.txt  (+3 more)
quickstart/: index.html
scripts/: e2e_rename_test.py  measure_asr_baseline.py  test_ffmpeg_install.py
search/: search_index.json
site/: 404.html  index.html
site/api/episode-matcher/: index.html
site/cli/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/tips/: index.html
tests/: debug_picker.py  test.py  test_backend_singleton.py  test_config_special_characters.py  test_core_utils_windows_paths.py  test_engine_v2.py  test_episode_identification.py  test_episode_matcher.py  test_error_handling.py  test_improvements.py  test_main.py  test_migration_and_device.py  test_model_registry.py  test_path_handling.py  test_path_spaces_quotes.py  test_tmdb_client.py  test_tmdb_id_feature.py  test_trailing_slash.py  test_ui_sanity.py  test_utils.py
tips/: index.html
(+47 files in other folders)
