[metadata]
name = mkv_episode_matcher
version = 0.1.13
author = Jonathan Sakkos
author_email = jonathansakkos@protonmail.com
description = The MKV Episode Matcher is a tool for identifying TV series episodes from MKV files and renaming the files accordingly.
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Jsakkos/mkv-episode-matcher